contta/src/Components/Elements/Modal.module.css
.modalContainer {
  position: fixed;
  width: 100vw;
  height: 100vh;
  top: 0;
  left: 0;
  background-color: #00000095;
  z-index: 2000;
  display: flex;
  align-items: center;
  justify-content: center;
}

.modal {
  background-color: #fafafa;
  width: fit-content;
  height: fit-content;
  max-height: 500px;
  max-width: 700px;
  border-radius: 5px;
  animation: animateModal .2s forwards;
  box-shadow: 0px 0px 20px rgba(0, 0, 0, .5);
  overflow: auto;
}

@keyframes animateModal {
  from {
    transform: scale(.8);
    opacity: 0;
  }

  to {
    transform: none;
    opacity: 1;
  }
}

.titleBar {
  border-bottom: 2px solid #eee;
  padding: 1rem 1rem;
  display: flex;
  gap: 1rem;
  justify-content: space-between;
  align-items: center;
  align-content: center;
  width: 100%;
}

.titleBar.noTitle {
  justify-content: end;
}

.buttonsContainer {
  width: fit-content;
  height: fit-content;
  display: flex;
  gap: 10px;
}

.buttonsContainer>span {
  background-color: #f3f3f3;
  border-radius: 50%;
}

.closeButton>svg {
  fill: #717171;
}

.closeButton {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 35px;
  width: 35px;
  cursor: pointer;
}

.closeButton:hover>svg {
  fill: red;
}

.modalContent {
  padding: 1rem;
}

